--- a/src/components/Balance/Balance.module.scss
+++ b/src/components/Balance/Balance.module.scss
@@ -1,36 +1,54 @@
-@import '@/styles/variables';
+.container {
+	padding-bottom: 2rem;
+	padding-top: 1rem;
+	display: flex;
+	align-items: center;
+	@media (max-width: 767px) {
+		flex-direction: column;
+		gap: 1rem;
+		padding-bottom: 0;
+		padding-top: 1rem;
+	}
+}
 
 .buttonExpense {
-	color: $color-green;
-	background-color: $color-gray;
+	color: var(--color-green);
+	background-color: var(--color-gray);
 	border-radius: 10px;
 	transition: all 0.5s;
 	&:hover {
-		background-color: $color-gray-50;
+		background-color: var(--color-gray-50);
 		transition-duration: 0.5s;
 	}
 }
 
 .buttonIncome {
-	color: $color-green;
-	background-color: $color-gray;
+	color: var(--color-green);
+	background-color: var(--color-gray);
 	border-radius: 10px;
 	transition: all 0.5s;
 	&:hover {
-		background-color: $color-gray-50;
+		background-color: var(--color-gray-50);
 		transition-duration: 0.5s;
 	}
 }
 
 .sectionButtons {
 	display: flex;
+	flex-direction: column;
 	gap: 10px;
 	width: 100%;
 	align-items: center;
 	justify-content: center;
+	@media (min-width: 389px) {
+		flex-direction: row;
+	}
 }
 
 .sectionCurrency {
 	margin-right: 1rem;
 	min-width: fit-content;
+	@media (max-width: 767px) {
+		text-align: center;
+	}
 }
