--- a/src/components/Chart/Chart.module.scss
+++ b/src/components/Chart/Chart.module.scss
@@ -1,4 +1,14 @@
+.title {
+	text-align: center;
+}
+
 .chart {
-	width: 300px;
+	max-width: 300px;
+	width: 100%;
 	margin: 0 auto;
+}
+
+.container {
+	margin-top: 2rem;
+	padding-bottom: 1rem;
 }
