--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -26,4 +26,18 @@
 	display: flex;
 	align-items: center;
 	gap: 1rem;
+	@media (max-width: 767px) {
+		display: none;
+	}
+}
+
+.hamburger {
+	display: none;
+	&Icon {
+		height: 2rem;
+		width: 2rem;
+	}
+	@media (max-width: 767px) {
+		display: block;
+	}
 }
