--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -3,6 +3,7 @@
 .input {
 	width: 100%;
 	padding-bottom: 1rem;
+	color: red;
 }
 
 .lastChild {
@@ -18,8 +19,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 400px;
-	padding: 2rem;
+	max-width: 400px;
+	width: 100%;
+	padding: 2rem 0;
 }
 
 .error {
