--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -5,13 +5,17 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 400px;
+	max-width: 400px;
+	width: 100%;
 	background: $color-white;
 	border: 2px solid $color-black;
 	boxshadow: 24;
 	padding: 2rem;
-	height: 90vh;
+	// height: 90vh;
 	overflow-y: scroll;
+	@media (max-width: 767px) {
+		padding: 1rem;
+	}
 }
 
 .inputs {
