--- a/src/components/Register/Register.module.scss
+++ b/src/components/Register/Register.module.scss
@@ -15,8 +15,10 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 400px;
-	padding: 2rem;
+	max-width: 400px;
+	width: 100%;
+	// padding: 2rem;
+	padding-top: 2rem;
 }
 
 .error {
