--- a/src/components/UI/ModalBasic/ModalBasic.module.scss
+++ b/src/components/UI/ModalBasic/ModalBasic.module.scss
@@ -5,15 +5,13 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 400px;
-	/* bgcolor: 'background.paper', */
+	width: 100%;
 	background: $color-white;
 	border: 2px solid $color-black;
 	boxshadow: 24;
-	/* p: 4, */
 	padding: 2rem;
-	// height: 90vh;
 	overflow-y: scroll;
-	/* overflow: auto; */
-	/* overflow: hidden; */
+	@media (max-width: 767px) {
+		padding: 2rem 1rem;
+	}
 }
