--- a/src/screens/HomeScreen/HomeScreen.module.scss
+++ b/src/screens/HomeScreen/HomeScreen.module.scss
@@ -1,4 +1,3 @@
-// @import '@/styles/globals';
 @import '@/styles/mixins';
 
 .title {
@@ -15,12 +14,25 @@
 .p {
 	text-wrap: balance;
 	text-align: center;
-	@include adaptiv-font(15, 10);
+	@include adaptiv-font(20, 12);
 }
 
 .h2 {
 	text-align: center;
 	font-weight: 400;
 	text-wrap: balance;
-	@include adaptiv-font(20, 10);
+	@include adaptiv-font(30, 15);
+}
+
+.logo {
+	width: 3rem;
+	height: 3rem;
+	@media (max-width: 767px) {
+		width: 2rem;
+		height: 2rem;
+	}
+	@media (max-width: 400px) {
+		width: 1.5rem;
+		height: 1.5rem;
+	}
 }
